fix: allow select options to wrap in mobile (#717)

--- a/packages/css/src/less/select.less
+++ b/packages/css/src/less/select.less
@@ -26,6 +26,10 @@
     .currency-flag {
       margin-right: var(--size-8);
     }
+
+    > a {
+      white-space: normal;
+    }
   }
 
   .dropdown-toggle.btn-input {
